--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,9 @@
 // Follow the order in the readme
+
+@import 'global.less';
+@import 'footer.less';
+@import 'home-page.less';
+@import 'mixins.less';
+@import 'navigation.less';
+@import 'reset.less';
+@import 'variables.less';
