--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,28 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1.5px dashed lightgray;
+}
+header h1.logo {
+  width: 100%;
+}
+header nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.6rem;
+  height: 80px;
+  width: 100%;
+}
+header nav:hover {
+  color: red;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
