--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
 // Navigation Styles here
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1.5px dashed lightgray;
+
+    h1.logo {
+        width: 100%;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        font-size: 1.6rem;
+        height: 80px;
+        width: 100%;
+
+        &:hover {
+            //test
+            color:red;
+        }
+    }
+
+}
