--- a/css/index.css
+++ b/css/index.css
@@ -163,6 +163,10 @@ img {
   max-width: 100%;
   height: auto;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
 .container {
   max-width: 800px;
   width: 100%;
@@ -171,9 +175,17 @@ img {
 header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   border-bottom: 1.5px dashed lightgray;
+}
+header .constraint-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 800px;
 }
 header h1.logo {
   width: 100%;
@@ -200,6 +212,10 @@ header nav:hover {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .home-intro {
+  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 10px;
 }
 .home .content-section {
   margin: 30px 0;
@@ -246,4 +262,16 @@ header nav:hover {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #008a8a;
+  height: 35px;
+  color: white;
+  border-radius: 10px;
+  width: 85%;
+  font-size: 1.6rem;
 }
