--- a/less/global.less
+++ b/less/global.less
@@ -39,6 +39,11 @@ img {
   height: auto;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .container {
   max-width: 800px;
   width: 100%;
