--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,10 @@
 .home {
 
+  .home-intro {
+    border-bottom: 2px dashed #C0C0C0;
+    padding-bottom: 10px;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -56,6 +61,20 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;        
+        background-color: lighten(teal, 2%);
+        height: 35px;
+        color: white;
+        border-radius: 10px;
+        width: 85%;
+        font-size: 1.6rem;
+
+      }
     }
   }
 }// home
