added mobile query to .container in global less, removed .btn styling from home-page and made a mixin out of it instead, added mobile queries to header, .constraint-wrapper, and .logo in navigation.less, added mobile variable with breakpoint to variables.less

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -63,17 +63,7 @@
       margin-bottom: 30px;
 
       .btn {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;        
-        background-color: lighten(teal, 2%);
-        height: 35px;
-        color: white;
-        border-radius: 10px;
-        width: 85%;
-        font-size: 1.6rem;
-
+        .btn-styler;
       }
     }
   }
