--- a/css/index.css
+++ b/css/index.css
@@ -172,12 +172,25 @@ a {
   width: 100%;
   margin: 0 auto;
 }
+@media ( max-width: 500px ) {
+  .container {
+    padding: 0px 20px;
+    width: 95%;
+  }
+}
 header {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   border-bottom: 1.5px dashed lightgray;
+}
+@media ( max-width: 500px ) {
+  header {
+    justify-content: center;
+    padding: 0px 20px;
+    width: 95%;
+  }
 }
 header .constraint-wrapper {
   display: flex;
@@ -187,8 +200,19 @@ header .constraint-wrapper {
   width: 100%;
   max-width: 800px;
 }
+@media ( max-width: 500px ) {
+  header .constraint-wrapper {
+    flex-direction: column;
+  }
+}
 header h1.logo {
   width: 100%;
+}
+@media ( max-width: 500px ) {
+  header h1.logo {
+    align-self: center;
+    width: auto;
+  }
 }
 header nav {
   display: flex;
@@ -274,4 +298,9 @@ header nav:hover {
   border-radius: 10px;
   width: 85%;
   font-size: 1.6rem;
+  transition: background-color 0.2s;
+}
+.home .content-pick .destination .btn:hover {
+  background-color: #007171;
+  cursor: pointer;
 }
