--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,12 @@ header {
     align-items: center;
     border-bottom: 1.5px dashed lightgray;
 
+    @media @mobile {
+        justify-content: center;
+        padding: 0px 20px;
+        width: 95%;
+    }
+
     .constraint-wrapper {
         display: flex;
         flex-direction: row;
@@ -13,10 +19,20 @@ header {
         align-items: center;
         width: 100%;
         max-width: 800px;
+
+        @media @mobile {
+            flex-direction: column;
+            
+        }
     }
 
     h1.logo {
         width: 100%;
+
+        @media @mobile {
+            align-self: center;
+            width: auto;
+        }
     }
 
     nav {
@@ -32,6 +48,8 @@ header {
             //test
             color:red;
         }
+
+        
     }
 
 }
