--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,39 +1,5 @@
 // Navigation Styles here
-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1.5px dashed lightgray;
 
-    @media @mobile {
-        justify-content: center;
-        padding: 0px 20px;
-        width: 95%;
-    }
-
-    .constraint-wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        max-width: 800px;
-
-        @media @mobile {
-            flex-direction: column;
-            
-        }
-    }
-
-    h1.logo {
-        width: 100%;
-
-        @media @mobile {
-            align-self: center;
-            width: auto;
-        }
-    }
 
     nav {
         display: flex;
@@ -47,6 +13,10 @@ header {
         &:hover {
             //test
             color:red;
+        }
+
+        @media @mobile {
+            height: 60px;
         }
 
         
