--- a/css/index.css
+++ b/css/index.css
@@ -172,50 +172,17 @@ a {
   width: 100%;
   margin: 0 auto;
 }
-@media ( max-width: 500px ) {
+@media ( max-width: 850px ) {
   .container {
     padding: 0px 20px;
+  }
+}
+@media ( max-width: 500px ) {
+  .container {
     width: 95%;
   }
 }
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  border-bottom: 1.5px dashed lightgray;
-}
-@media ( max-width: 500px ) {
-  header {
-    justify-content: center;
-    padding: 0px 20px;
-    width: 95%;
-    margin-top: 20px;
-  }
-}
-header .constraint-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: 800px;
-}
-@media ( max-width: 500px ) {
-  header .constraint-wrapper {
-    flex-direction: column;
-  }
-}
-header h1.logo {
-  width: 100%;
-}
-@media ( max-width: 500px ) {
-  header h1.logo {
-    align-self: center;
-    width: auto;
-  }
-}
-header nav {
+nav {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -224,11 +191,8 @@ header nav {
   height: 80px;
   width: 100%;
 }
-header nav:hover {
-  color: red;
-}
 @media ( max-width: 500px ) {
-  header nav {
+  nav {
     height: 60px;
   }
 }
@@ -329,7 +293,7 @@ header nav:hover {
   border-radius: 10px;
   width: 85%;
   font-size: 1.6rem;
-  transition: background-color 0.2s;
+  transition: background-color 0.28s;
   width: 100%;
 }
 .home .content-pick .destination .btn:hover {
@@ -346,5 +310,48 @@ header nav:hover {
 @media ( max-width: 500px ) {
   .home .content-pick {
     flex-direction: column;
+  }
+}
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1.5px dashed lightgray;
+}
+@media ( max-width: 500px ) {
+  header {
+    justify-content: center;
+    padding: 0px 20px;
+    width: 95%;
+    margin-top: 20px;
+  }
+}
+header .constraint-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 800px;
+  width: 100%;
+}
+@media ( max-width: 850px ) {
+  header .constraint-wrapper {
+    padding-left: 20px;
+  }
+}
+@media ( max-width: 500px ) {
+  header .constraint-wrapper {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+header .constraint-wrapper h1.logo {
+  width: 100%;
+}
+@media ( max-width: 500px ) {
+  header .constraint-wrapper h1.logo {
+    align-self: center;
+    width: auto;
   }
 }
