--- a/less/global.less
+++ b/less/global.less
@@ -49,8 +49,11 @@ a {
   width: 100%;
   margin: 0 auto;
 
-  @media @mobile {
+  @media @tablet {
     padding: 0px 20px;
+  }
+
+  @media @mobile {
     width: 95%;
   }
 }
