--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,42 +1,5 @@
 .home {
 
-  header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1.5px dashed lightgray;
-
-    @media @mobile {
-        justify-content: center;
-        padding: 0px 20px;
-        width: 95%;
-        margin-top: 20px;
-    }
-
-    .constraint-wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        max-width: 800px;
-
-        @media @mobile {
-            flex-direction: column;
-            
-        }
-    }
-
-    h1.logo {
-        width: 100%;
-
-        @media @mobile {
-            align-self: center;
-            width: auto;
-        }
-    }
-
   .home-intro {
     border-bottom: 2px dashed #C0C0C0;
     padding-bottom: 10px;
@@ -136,4 +99,46 @@
       flex-direction: column;
     }
   }
-}// home
+} // home
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1.5px dashed lightgray;
+
+  @media @mobile {
+    justify-content: center;
+    padding: 0px 20px;
+    width: 95%;
+    margin-top: 20px;
+  } //header mobile query
+
+  .constraint-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 800px;
+    width: 100%;
+
+    @media @tablet {
+      padding-left: 20px;
+    }
+
+    @media @mobile {
+      flex-direction: column;
+      justify-content: center;
+    }  
+
+    h1.logo {
+      width: 100%;
+
+      @media @mobile {
+        align-self: center;
+        width: auto;
+      }
+    }
+  }
+}
